--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <nav class="nav">
-        <a href="https://docs.google.com/spreadsheets/d/1wcwOeazKBiMnwlPfke60ltBxg21Ch5vKce3c1-VKtmk/edit?usp=drive_link">Doggy Grunkor</a>
-        <p>I am some text!</p>
+        <a href="DoggyGrunkor/index.html">Doggy Grunkor</a>
     </nav>
     <header class="header">
         <img class="logo" src="assets/media/header.png" alt="Doggy logo in unofficial ascotiation with Valhalla Coding">
