--- a/DoggyGrunkor/index.html
+++ b/DoggyGrunkor/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doggy Grunkor</title>
-    <meta http-equiv="refresh" content="delay_time; URL=https://docs.google.com/spreadsheets/d/1wcwOeazKBiMnwlPfke60ltBxg21Ch5vKce3c1-VKtmk/edit?usp=drive_link" />
+    <meta http-equiv="Refresh" content="0; URL=https://docs.google.com/spreadsheets/d/1wcwOeazKBiMnwlPfke60ltBxg21Ch5vKce3c1-VKtmk/edit?usp=drive_link" />
 </head>
 <body>
-    
+    <section>
+        <h1>
+            Laddar sida, var god dröj!
+            Om inget händer, tryck länk nedan:
+            <br>
+            <a href="https://docs.google.com/spreadsheets/d/1wcwOeazKBiMnwlPfke60ltBxg21Ch5vKce3c1-VKtmk/edit?usp=drive_link">Doggy Grunkor</a>
+        </h1>        
+    </section>
 </body>
 </html>
