--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <header class="header">
         <img class="logo" src="assets/media/header.png" alt="Doggy logo in unofficial ascotiation with Valhalla Coding">
     </header>
+    <footer class="foot">
+        <p>&copy; 2023 Valhalla Coding</p>
+    </footer>
 </body>
 </html>
