--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <nav class="nav">
-        <a href="DoggyGrunkor/index.html">Doggy Grunkor</a>
+        <ul class="menu">
+           <li><a href="https://sodori.se/" data-hover="Valhalla Coding">Valhalla Coding</a></li>
+           <li><a href="DoggyGrunkor/index.html" data-hover="Doggy Grunkor">Doggy Grunkor</a></li>
+           <li><a href="#" data-hover="Sandahls">Sandahls</a></li>
+        </ul>
     </nav>
     <header class="header">
         <img class="logo" src="assets/media/header.png" alt="Doggy logo in unofficial ascotiation with Valhalla Coding">
