--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
 </head>
 <body>
     <nav class="nav">
-        <ul class="menu">
-           <li><a href="https://sodori.se/" data-hover="Valhalla Coding">Valhalla Coding</a></li>
-           <li><a href="DoggyGrunkor/index.html" data-hover="Doggy Grunkor">Doggy Grunkor</a></li>
-           <li><a href="#" data-hover="Sandahls">Sandahls</a></li>
-        </ul>
+        <div class="nLogo">
+          <a href="http://doggy.sodori.se"><img id="DGlogo" src="assets/media/Doggy Grunkor/Doggy Grunkor.ico" alt="Logo of Doggy Grunkor"></a>
+        </div>
+        <div class="destinations">
+            <ul class="menu">
+                <li><a href="https://sodori.se/" data-hover="Valhalla Coding">Valhalla Coding</a></li>
+                <li><a href="DoggyGrunkor/index.html" data-hover="Doggy Grunkor">Doggy Grunkor</a></li>
+                <li><a href="#" data-hover="Sandahls">Sandahls</a></li>
+            </ul>
+        </div>
     </nav>
     <header class="header">
-        <img class="logo" src="assets/media/header.png" alt="Doggy logo in unofficial ascotiation with Valhalla Coding">
+        <img id="DoggyValhalla" src="assets/media/header.png" alt="Doggy logo in unofficial ascotiation with Valhalla Coding">
     </header>
     <footer class="foot">
-        <p>&copy; 2023 Valhalla Coding</p>
+        <p style="text-align: right;">&copy; 2023 Valhalla Coding</p>
     </footer>
 </body>
 </html>
