--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="destinations">
             <ul class="menu">
                 <li><a href="https://sodori.se/" data-hover="Valhalla Coding">Valhalla Coding</a></li>
-                <li><a href="DoggyGrunkor/index.html" data-hover="Doggy Grunkor">Doggy Grunkor</a></li>
-                <li><a href="#" data-hover="Sandahls">Sandahls</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1wcwOeazKBiMnwlPfke60ltBxg21Ch5vKce3c1-VKtmk/edit?usp=drive_link" data-hover="To Spreadsheet">Doggy Grunkor<br>Spreadsheet</a></li>
+                <li><a href="#" data-hover="Följesedel">Följesedel</a></li>
             </ul>
         </div>
     </nav>
@@ -24,7 +24,7 @@
         <img id="DoggyValhalla" src="assets/media/header.png" alt="Doggy logo in unofficial ascotiation with Valhalla Coding">
     </header>
     <footer class="foot">
-        <p style="text-align: right;">&copy; 2023 Valhalla Coding</p>
+        <p class="footer">&copy; 2023 Valhalla Coding</p>
     </footer>
 </body>
 </html>
