--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="https://sodori.se/" data-hover="Valhalla Coding">Valhalla Coding</a></li>
                 <li><a href="https://docs.google.com/spreadsheets/d/1wcwOeazKBiMnwlPfke60ltBxg21Ch5vKce3c1-VKtmk/edit?usp=drive_link" data-hover="To Spreadsheet">Doggy Grunkor<br>Spreadsheet</a></li>
                 <li><a href="#" data-hover="Följesedel">Följesedel</a></li>
-                <li><a href="labels/index.html" data-hover="Pouch Etiketter">Pouch Etiketter</a></li>
+                <li><a href="labels/" data-hover="Pouch Etiketter">Pouch Etiketter</a></li>
             </ul>
         </div>
     </nav>
